--- a/package.json
+++ b/package.json
@@ -1,45 +1,60 @@
 {
-  "name": "lear-music-reader",
-  "version": "0.1.0",
-  "private": true,
-  "dependencies": {
-    "lodash.throttle": "^4.1.1",
-    "react": "^16.8.6",
-    "react-dom": "^16.8.6",
-    "react-pdf": "^4.0.5",
-    "react-pinch-and-zoom": "^1.1.3",
-    "react-scripts": "3.0.0",
-    "react-swipeable": "^5.2.0"
-  },
-  "homepage": "./",
-  "main": "src/electron-starter.js",
-  "scripts": {
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "react-start": "BROWSER=none $(npm bin)/react-scripts start",
-    "electron-start": "ELECTRON_DEV=1 $(npm bin)/electron .",
-    "start": "concurrently \"npm run react-start\" \"wait-on http://localhost:3000/ && npm run electron-start\"",
-    "electron": "electron .",
-    "electron-dev": "ELECTRON_START_URL=http://localhost:3000 electron ."
-  },
-  "eslintConfig": {
-    "extends": "react-app"
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  },
-  "devDependencies": {
-    "auto-bind": "^2.1.0",
-    "electron": "^5.0.0"
-  }
+    "name": "lear-music-reader",
+    "version": "0.1.0",
+    "private": true,
+    "dependencies": {
+        "lodash.throttle": "^4.1.1",
+        "react": "^16.8.6",
+        "react-dom": "^16.8.6",
+        "react-pdf": "^4.0.5",
+        "react-scripts": "3.0.0",
+        "react-swipeable": "^5.2.0"
+    },
+    "homepage": "./",
+    "main": "public/electron-starter.js",
+    "scripts": {
+        "build": "react-scripts build",
+        "test": "react-scripts test",
+        "eject": "react-scripts eject",
+        "react-start": "BROWSER=none $(npm bin)/react-scripts start",
+        "electron-start": "ELECTRON_DEV=1 $(npm bin)/electron .",
+        "start": "concurrently \"npm run react-start\" \"wait-on http://localhost:3000/ && npm run electron-start\"",
+        "dev": "concurrently \"npm run react-start\" \"wait-on http://localhost:3000/ && npm run electron-dev\"",
+        "electron": "electron .",
+        "electron-dev": "ELECTRON_START_URL=http://localhost:3000 electron .",
+        "preelectron-pack": "npm run build",
+        "electron-pack": "build -c.extraMetadata.main=build/electron-starter.js"
+    },
+    "eslintConfig": {
+        "extends": "react-app"
+    },
+    "browserslist": {
+        "production": [
+            ">0.2%",
+            "not dead",
+            "not op_mini all"
+        ],
+        "development": [
+            "last 1 chrome version",
+            "last 1 firefox version",
+            "last 1 safari version"
+        ]
+    },
+    "devDependencies": {
+        "auto-bind": "^2.1.0",
+        "create-symlink": "^1.0.0",
+        "electron": "^5.0.0",
+        "electron-builder": "^20.39.0",
+        "typescript": "^3.4.5"
+    },
+    "build": {
+        "appId": "nonExistentID",
+        "files": [
+            "build/**/*",
+            "node_modules/**/*"
+        ],
+        "directories": {
+            "buildResources": "public"
+        }
+    }
 }
