--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
         "create-symlink": "^1.0.0",
         "electron": "^5.0.0",
         "electron-builder": "^20.39.0",
+        "reactjs-popup": "^1.3.2",
         "typescript": "^3.4.5"
     },
     "build": {
